/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java application project to get you started.
 * For more details on building Java & JVM projects, please refer to https://docs.gradle.org/8.13/userguide/building_java_projects.html in the Gradle documentation.
 */

plugins {
    id 'application'
}

repositories {
    mavenCentral()
}

dependencies {
    testImplementation libs.junit.jupiter

    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    implementation libs.guava

    testImplementation 'org.mockito:mockito-core:5.11.0' 
    testImplementation 'org.mockito:mockito-junit-jupiter:5.11.0' 
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.2' 
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.10.2'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

application {
    mainClass = 'lab.arahnik.App'
}

tasks.named('test') {
    useJUnitPlatform()

    jvmArgs '-XX:+EnableDynamicAgentLoading'
}